--- a/templates/default/server.xml.erb
+++ b/templates/default/server.xml.erb
@@ -27,7 +27,13 @@
   <!--APR library loader. Documentation at /docs/apr.html -->
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />
   <!--Initialize Jasper prior to webapps are loaded. Documentation at /docs/jasper-howto.html -->
+  <!-- # JasperListener needs to be commented out in tomcat 8 or higher. -->
+  <% if @tomcatversion[0].to_i >= 8 %>  
+  <!--Listener className="org.apache.catalina.core.JasperListener" /-->
+  <% else %> 
   <Listener className="org.apache.catalina.core.JasperListener" />
+  <% end %>
+
   <!-- Prevent memory leaks due to use of particular java/javax APIs-->
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
